<resources>
    <string name="app_name">ScannerTool</string>
    <string name="app_title">Package Scanner</string>
    <string name="str_login">Login</string>
    <string name="str_submit">Submit</string>
    <string name="str_loginWelcome">Please enter login information.</string>
    <string name="str_userWelcome">Welcome, please select an action below.</string>
    <string name="str_trackWelcome">Enter tracking number(s) below.</string>
    <string name="str_trackMult">To track multiple packages,\nplease place each number on a new line.\n(Max 5 per search)</string>
    <string name="str_manualTrack">Please enter tracking information below, then press submit.</string>
    <string name="str_scanInstructions">Please complete the form below, then press submit.</string>
    <string name="str_currentUser">Submitting as:</string>
    <string name="str_userStatus">Logged in as: </string>
    <string name="str_timeStamp">Timestamp:</string>
    <string name="str_trackPckg">Track Package(s)</string>
    <string name="str_scanPckg">Scan\nPackage</string>
    <string name="str_quickLookup">Quick Lookup</string>
    <string name="str_scanPckgNoSplit">Scan Package</string>
    <string name="str_searchResults"><u>Search Results</u></string>
    <string name="str_manualScan">Manual\nEntry</string>
    <string name="str_getLocation">Get Coords</string>
    <string name="str_coords">Coords:</string>
    <string name="str_pkgNumber">Package Number</string>
    <string name="str_Location">Location</string>
    <string name="str_Username">Username</string>
    <string name="str_Password">Password</string>
    <string name="str_logout">Logout</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_goBack">Go Back</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_Register">Register</string>
    <string name="str_error">Error</string>
    <string name="str_email">E-Mail</string>
    <string name="str_push">Push Notifications</string>
</resources>
