<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/ScanText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textSize="12pt"
        android:text="@string/str_manualTrack"/>

    <LinearLayout
        android:id="@+id/TrackingInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ScanText"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:inputType="number"
            android:hint="@string/str_pkgNumber"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/TrackingInfo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TrackingInfo"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".15"
        android:inputType="none"
        android:hint="@string/str_Location"/>

        <Button
            android:id="@+id/GetCoords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_getLocation"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/TrackingInfo2"
        android:padding="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_submit"/>

        <Button
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/scanButton"
            android:text="@string/str_goBack" />

    </RelativeLayout>

</RelativeLayout>