<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:id="@+id/TrackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/str_trackWelcome"/>

    <TextView
        android:id="@+id/MultiMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TrackText"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:text="@string/str_trackMult"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MultiMessage"
        android:layout_centerInParent="true"
        android:text="@string/str_trackPckg"/>

</RelativeLayout>